[package]
name = "space_tennis"
version = "2.0.0"
description = "A 3D pong game made with piston"
readme = "README.md"
repository = "https://gitlab.com/torbmol/space_tennis"
authors = ["Torbjørn Birch Moltu <t.b.moltu@lyse.net>"]
license = "GPL-3.0-or-later"

[[bin]]
name = "space_tennis"
path = "space_tennis.rs"

[dependencies]
speedy2d = "1.12.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 3
lto = true
