[package]
name = "space_tennis"
version = "1.1.0"
description = "A 3D pong game made with piston"
readme = "README.md"
repository = "https://gitlab.com/torbmol/space_tennis"
authors = ["Torbjørn Birch Moltu <t.b.moltu@lyse.net>"]
license = "GPL-3.0-or-later"
edition = "2021"

[[bin]]
name = "space_tennis"
path = "main.rs"

[dependencies]
interface = {path="interface"}
engine = {path="engine"}
game = {path="game/", optional=true}

[features]
dyn = ["engine/dyn", "interface/dyn", "game"]

# [profile.dev]
# panic = "abort" # doesn't work with dylib

[profile.dev.package."*"]
opt-level = 2
debug = false
overflow-checks = false

[profile.release]
panic = "abort"
opt-level = 3
lto = true
