[package]
name = "space_tennis"
version = "1.2.0"
description = "A 3D pong game made with piston"
readme = "README.md"
repository = "https://gitlab.com/torbmol/space_tennis"
authors = ["Torbjørn Birch Moltu <t.b.moltu@lyse.net>"]
license = "GPL-3.0-or-later"
edition = "2021"

[[bin]]
name = "space_tennis"
path = "main.rs"

[dependencies]
interface = {path="interface"}
engine = {path="engine"}
game = {path="game/", optional=true}

[target.'cfg(target_arch="wasm32")'.dependencies]
log = "0.4"
wasm-logger = "0.2"
console_error_panic_hook = "0.1.6"

[features]
dyn = ["engine/dyn", "interface/dyn", "game"]
piston = ["engine/piston"]

# [profile.dev]
# panic = "abort" # doesn't work with dylib

[profile.dev.package."*"]
opt-level = 2
debug = false
overflow-checks = false

[profile.release]
panic = "abort"
opt-level = 3
lto = true
