[package]
name = "engine"
description = """
Parts that might be reused between games.
"""
version = "0.0.0"
authors = ["Torbjørn Birch Moltu <t.b.moltu@lyse.net>"]
license = "GPL-3.0-or-later"
edition = "2021"

[dependencies]
interface = {path="../interface"}
speedy2d = {version="1.12.0", optional=true}
fxhash = "0.2.1"
# dependencies for disabled features still get added to Cargo.lock,
# so piston dependencies are commented out to avoid Cargo.toml growing too much.
#piston_window = {version="0.127", optional=true}
#piston2d-opengl_graphics = {version="0.82", optional=true}
# for reloading
dlopen = {version="0.1", optional=true}
notify = {version="6", default-features=false, features=["macos_kqueue"], optional=true}

[features]
dyn = ["dlopen", "notify", "interface/dyn"]
piston = [] # ["piston_window", "piston2d-opengl_graphics"]
default = ["speedy2d"]
